# GalaxySpectrumClassifier

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
configs/: pipeline.yaml
doc/: api.rst  conf.py  index.rst
literature/outputs/: ml-galaxy-emission-classification.bib  ml-galaxy-emission-classification.md  ml-galaxy-emission-classification.provenance.md
notebooks/: demo.ipynb
src/GalaxySpectrumClassifier/: GBClassifier.py  RFClassifier.py  __init__.py  __main__.py  _version.py  base.py  data.py  hgb_classifier.py  rf_classifier.py  trainer.py  utils.py
template/classification_v2/: AGENTS.md  classificator_test.py  plot_bpt.py
tests/: conftest.py  test_GalaxySpectrumClassifier.py  test_cli.py  test_cloudydataset.py  test_pandasdataset.py
