# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = ["setuptools >=61", "setuptools_scm >=7"]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for GalaxySpectrumClassifier's version
[project]
name = "GalaxySpectrumClassifier"
description = "A classifier system for galaxy spectra"
readme = "README.md"
maintainers = [
    { name = "Harald Mack", email = "harald.mack@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.12"
license-files = ["LICEN[CS]E*"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.4.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pyaml>=26.2.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "skorch>=1.4.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "nbval"]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]

# Command line scripts installed as part of the installation
[project.scripts]
GalaxySpectrumClassifier = "GalaxySpectrumClassifier.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.packages.find]
where = ["src"]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/GalaxySpectrumClassifier/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
